--- a/Neural Net.ipynb
+++ b/Neural Net.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 116,
    "id": "a14e7422-de67-4526-bd0b-ee944991bb3d",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 117,
    "id": "4baf86fa-2c50-4a3f-a3c4-be0418fb1191",
    "metadata": {
     "tags": []
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 118,
    "id": "5e4a46ef-9f8f-48e5-af00-47dece34d5be",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 119,
    "id": "7bea2d1a-f43f-4e89-87e3-71a70cf1bcdd",
    "metadata": {
     "tags": []
@@ -194,7 +194,7 @@
        "4          1.86481       6.0  "
       ]
      },
-     "execution_count": 240,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 120,
    "id": "a5f86eeb-6dc0-41e9-a480-629a9804e043",
    "metadata": {
     "tags": []
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 121,
    "id": "a08f5b2b-dbbf-4ab0-933f-0b70b25a48b6",
    "metadata": {
     "tags": []
@@ -461,7 +461,7 @@
        "max           0.825990        10.970000     10.000000  "
       ]
      },
-     "execution_count": 242,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 122,
    "id": "65b838f4-03ac-461a-bc0d-7604550a7db2",
    "metadata": {
     "tags": []
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 123,
    "id": "dc27c0d6-29ad-487a-8673-01e8c839dad6",
    "metadata": {
     "tags": []
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 124,
    "id": "09a0152a-1ee3-4774-9176-cb0c8cc42ab0",
    "metadata": {
     "tags": []
@@ -657,7 +657,7 @@
        "4         0.169992       6.0  "
       ]
      },
-     "execution_count": 245,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 125,
    "id": "c44c7712-3f81-4357-b0ce-f66fdda76abe",
    "metadata": {
     "tags": []
@@ -819,7 +819,7 @@
        "4         0.085192  "
       ]
      },
-     "execution_count": 246,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 126,
    "id": "6ea376f1-3ce6-42b0-ba78-95f2578c993d",
    "metadata": {
     "tags": []
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 127,
    "id": "4d77943e-f758-4927-8dee-917015a16191",
    "metadata": {
     "tags": []
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 128,
    "id": "30559158-7657-49cd-9862-1d1a47372eda",
    "metadata": {
     "tags": []
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 129,
    "id": "cfed729e-4dc8-4194-80df-7860136f4aac",
    "metadata": {
     "tags": []
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 130,
    "id": "98dc11a8-625d-4a71-a2f1-f5fcfbd0dd47",
    "metadata": {
     "tags": []
@@ -893,20 +893,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 131,
    "id": "d03475d3-116d-4d62-8eba-8ac55d2ca4c0",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "y_train = torch.LongTensor(y_train)\n",
-    "y_test = torch.LongTensor(y_test)"
+    "y_train = torch.FloatTensor(y_train)\n",
+    "y_test = torch.FloatTensor(y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 132,
    "id": "de08282a-9b4f-4955-a902-7acb79a33e03",
    "metadata": {
     "tags": []
@@ -915,10 +915,10 @@
     {
      "data": {
       "text/plain": [
-       "torch.int64"
+       "torch.float32"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 133,
    "id": "390dc882-e42b-4a9e-ba92-e3598f6abe34",
    "metadata": {
     "tags": []
@@ -941,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 134,
    "id": "3b177aae-f629-4a06-822c-547c5cab88e4",
    "metadata": {
     "tags": []
@@ -953,7 +953,7 @@
        "torch.Size([7805, 11])"
       ]
      },
-     "execution_count": 255,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 135,
    "id": "f683a34e-e717-4a87-9337-08a9c1a8a884",
    "metadata": {
     "tags": []
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 148,
    "id": "3650c3e3-0392-4234-977d-3f74ca852454",
    "metadata": {},
    "outputs": [],
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 149,
    "id": "d8b1cec6-48ac-4d63-a766-10216f7ea45c",
    "metadata": {
     "tags": []
@@ -1021,7 +1021,7 @@
        ")"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1034,48 +1034,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 150,
    "id": "7a9bccb1-e754-490c-9992-5208c3e383d7",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# loss_fn = nn.L1Loss()\n",
-    "loss_fn = F.l1_loss\n",
-    "optimizer = torch.optim.SGD(params = model_0.parameters(),lr = 0.001)"
+    "loss_fn = nn.L1Loss()\n",
+    "# loss_fn = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.SGD(params = model_0.parameters(),lr = 0.01)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 151,
    "id": "13f01d97-eff4-4058-8b6c-441cce17b5fc",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Temp\\ipykernel_4648\\1652484618.py:9: UserWarning: Using a target size (torch.Size([7805])) that is different to the input size (torch.Size([7805, 1])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  loss = loss_fn(y_pred,y_train)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epochs: 0 | Loss: 4.2897 | Test Loss: 4.2652\n",
-      "Epochs: 10 | Loss: 4.2897 | Test Loss: 4.2652\n",
-      "Epochs: 20 | Loss: 4.2897 | Test Loss: 4.2652\n",
-      "Epochs: 30 | Loss: 4.2897 | Test Loss: 4.2652\n",
-      "Epochs: 40 | Loss: 4.2897 | Test Loss: 4.2652\n",
-      "Epochs: 50 | Loss: 4.2897 | Test Loss: 4.2652\n",
-      "Epochs: 60 | Loss: 4.2897 | Test Loss: 4.2652\n",
-      "Epochs: 70 | Loss: 4.2897 | Test Loss: 4.2652\n",
-      "Epochs: 80 | Loss: 4.2897 | Test Loss: 4.2652\n",
-      "Epochs: 90 | Loss: 4.2897 | Test Loss: 4.2652\n"
+      "Epochs: 0 | Loss: 4.6556 | Test Loss: 4.6217\n",
+      "Epochs: 10 | Loss: 4.6556 | Test Loss: 4.6217\n",
+      "Epochs: 20 | Loss: 4.6556 | Test Loss: 4.6217\n",
+      "Epochs: 30 | Loss: 4.6556 | Test Loss: 4.6217\n",
+      "Epochs: 40 | Loss: 4.6556 | Test Loss: 4.6217\n",
+      "Epochs: 50 | Loss: 4.6556 | Test Loss: 4.6217\n",
+      "Epochs: 60 | Loss: 4.6556 | Test Loss: 4.6217\n",
+      "Epochs: 70 | Loss: 4.6556 | Test Loss: 4.6217\n",
+      "Epochs: 80 | Loss: 4.6556 | Test Loss: 4.6217\n",
+      "Epochs: 90 | Loss: 4.6556 | Test Loss: 4.6217\n"
      ]
     }
    ],
@@ -1088,7 +1080,7 @@
     "    \n",
     "    y_pred = model_0(X_train)\n",
     "    \n",
-    "    loss = loss_fn(y_pred,y_train)\n",
+    "    loss = loss_fn(y_pred.squeeze(),y_train)\n",
     "    \n",
     "    optimizer.zero_grad()\n",
     "    \n",
@@ -1109,8 +1101,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
-   "id": "760dc474-79a4-4373-8f91-a1a8192b1857",
+   "execution_count": 152,
+   "id": "0093b1bf-3d5e-4187-907c-9dc9bc013d09",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([7805, 1]), torch.Size([7805]))"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred.shape,y_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "cd68f319-c992-44bb-8c77-ebd3d5fa41f3",
    "metadata": {
     "tags": []
    },
@@ -1118,37 +1131,50 @@
     {
      "data": {
       "text/plain": [
-       "tensor([0., 0., 0.,  ..., 0., 0., 0.])"
+       "tensor([0., 0., 0.,  ..., 0., 0., 0.], grad_fn=<SqueezeBackward1>)"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "y_pred.squeeze(dim = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ced1677-dc42-47d2-ad3b-bc875814c0aa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "y_pred.detach()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "760dc474-79a4-4373-8f91-a1a8192b1857",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
    "source": [
     "test_pred.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": null,
    "id": "c8cc7a1b-6215-410e-a23d-9366ffa39a6e",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([5, 7, 2,  ..., 6, 5, 6])"
-      ]
-     },
-     "execution_count": 270,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_test"
    ]
@@ -1192,23 +1218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "id": "24f35022-712f-4b00-962c-eb94e88a712e",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([5, 7, 2,  ..., 6, 5, 6])"
-      ]
-     },
-     "execution_count": 266,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "y_test"
    ]
