--- a/Stacked Model 2.ipynb
+++ b/Stacked Model 2.ipynb
@@ -5,7 +5,19 @@
    "execution_count": 1,
    "id": "3153dec1-8b3f-439f-8927-525b57c10cd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\USER\\Kaggle Moh Hardness\\Stacked Model 2.ipynb Cell 1\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/USER/Kaggle%20Moh%20Hardness/Stacked%20Model%202.ipynb#W0sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m# let us import all the libraries\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/USER/Kaggle%20Moh%20Hardness/Stacked%20Model%202.ipynb#W0sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39m# to handle datasets\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/USER/Kaggle%20Moh%20Hardness/Stacked%20Model%202.ipynb#W0sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mnumpy\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mnp\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/USER/Kaggle%20Moh%20Hardness/Stacked%20Model%202.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mpandas\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mpd\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/USER/Kaggle%20Moh%20Hardness/Stacked%20Model%202.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# for plotting\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/USER/Kaggle%20Moh%20Hardness/Stacked%20Model%202.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "# let us import all the libraries\n",
     "# to handle datasets\n",
@@ -40,7 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "dffef491",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "512a596e",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +88,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "id": "4bc43287",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +117,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "768ae8c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +128,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "a52b073e",
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +282,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "id": "3eac4044",
    "metadata": {},
    "outputs": [
     {
@@ -290,6 +308,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "661944ad",
    "metadata": {},
    "source": [
     "### KNeighborsRegressor"
@@ -298,6 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "a56d4f92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,6 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "ce806fc9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,6 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "baab745c",
    "metadata": {},
    "outputs": [
     {
@@ -340,6 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "1aba4e37",
    "metadata": {},
    "outputs": [
     {
@@ -359,6 +382,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5588b52",
    "metadata": {},
    "source": [
     "### Support Vector Machine"
@@ -367,6 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "4c25ab31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,6 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
+   "id": "edf63dd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,6 +411,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
+   "id": "77b8ec49",
    "metadata": {},
    "outputs": [
     {
@@ -407,6 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "19372044",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,6 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "74e36ed2",
    "metadata": {},
    "outputs": [
     {
@@ -439,6 +468,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "0d8a275a",
    "metadata": {},
    "outputs": [
     {
@@ -471,6 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "f277c27a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,6 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "431842c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,6 +522,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "8195f4c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -500,6 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "0430738f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,6 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "c7b48551",
    "metadata": {},
    "outputs": [
     {
@@ -531,6 +566,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bd35eb28",
    "metadata": {},
    "source": [
     "### Decision Tree Regressor"
@@ -539,6 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "d12c1c47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,6 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "5502178d",
    "metadata": {},
    "outputs": [
     {
@@ -572,6 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "c377ed16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,6 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "115e12ce",
    "metadata": {},
    "outputs": [
     {
@@ -616,6 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "befd0f2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,6 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
+   "id": "fc83b309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,6 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
+   "id": "8d28149d",
    "metadata": {},
    "outputs": [
     {
@@ -658,6 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "4355b32c",
    "metadata": {},
    "outputs": [
     {
@@ -683,6 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "7161c645",
    "metadata": {},
    "outputs": [
     {
@@ -836,6 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "f6c07ded",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,6 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
+   "id": "aa1d4599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,6 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
+   "id": "46299e55",
    "metadata": {},
    "outputs": [
     {
@@ -879,6 +927,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
+   "id": "260d8afe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,6 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
+   "id": "409fc7dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,6 +951,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
+   "id": "e52c72ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,6 +966,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "06b47cc2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -924,6 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1452c2e7",
    "metadata": {},
    "outputs": [
     {
@@ -950,6 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36ddb568",
    "metadata": {},
    "outputs": [
     {
@@ -971,6 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "cae831a2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -978,6 +1033,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "754d2208",
    "metadata": {},
    "outputs": [],
    "source": []
